<resources>
    <string name="app_name">NextGen CarRental</string>
    <string name="VoiceChatWindowTitle">Your Virtual Agent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_configure">Configure</string>

    <!-- permission related messages -->
    <string name="permission_rationale_text">"Please enable required permissions
        to use this app."
    </string>

    <!-- Example General settings -->
    <string name="pref_header_developer">Developer Mode</string>

    <!-- Strings related to menu -->
    <string name="menu_home">Home</string>
    <string name="menu_reservations">Reservation</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Sign Out</string>
    <string name="menu_sep_label">Personalize</string>


    <!-- Strings related to login -->
    <string name="title_activity_login">CarRental Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_remember_me">Remember me</string>
    <string name="prompt_forget_password">Forget your Password?</string>
    <string name="action_login">Login</string>
    <string name="action_login_short">Login</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_login_attempt">The username/password is incorrect.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="show_reservation_thumbnail">thumbnail</string>

    <!-- Confirmation fragment -->
    <string name="review_screen_user_message">Please review your booking information..</string>
    <string name="confirmation_screen_user_message">CONFIRMATION # </string>
    <string name="promo_list">
        <li>Weekend Specials - Starting at $9.99/day</li>
        <li>Discount available on luxury cars</li>
    </string>

    <!-- Profile page strings -->
    <string name="profile_name">Name</string>
    <string name="profile_name_hint">Enter your name</string>
    <string name="profile_alt_name">Alternate Name</string>
    <string name="profile_alt_name_hint">Enter your alternate name</string>
    <string name="profile_car_type">Preferred Car Type</string>
    <string name="profile_car_type_hint">Select preferred car type</string>
    <string name="profile_button_save">Save</string>
    <string name="profile_button_cancel">Cancel</string>
    <string name="close_icon">close icon</string>
    <string name="info_icon">info icon</string>
    <string name="home_pickup_text">Lambert - St. Louis Int Airport</string>
    <string name="home_car_type_text">Compact</string>
    <string name="home_pickup_time_text">Thu Apr 19, 2018 - 12:00 PM</string>

    <string-array name="car_type_list">
        <item>Economy</item>
        <item>Standard</item>
        <item>Midsize</item>
        <item>Premium</item>
        <item>SUV</item>
    </string-array>

    <string-array name="ai_access_token">
        <item>532d89f6186343f882522a420bc87b28</item>
        <item>c57af71690154ea18eeeebe86edd152b</item>
    </string-array>

    <string-array name="pref_environment_list">
        <item>Dev</item>
        <item>Prod</item>
    </string-array>

    <string name="pref_ringtone_silent">Silent</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
