<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_login"
    android:orientation="vertical"
    tools:context=".android.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/app_name"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_directions_car_black_24dp" />

            <EditText
                android:id="@+id/username"
                style="@style/LoginFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_person_white_24dp"
                android:ems="10"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress|textAutoComplete"
                android:maxLines="1"
                android:padding="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/password"
                style="@style/LoginFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <CheckBox
                android:id="@+id/remember_me_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:buttonTint="@color/lightGreen"
                android:checked="true"
                android:padding="8dp"
                android:text="@string/prompt_remember_me"
                android:textColor="@color/lightGreen" />

            <TextView
                android:id="@+id/login_error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark" />

            <Button
                android:id="@+id/user_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_style_login"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:text="@string/action_login"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/prompt_forget_password"
                android:textColor="@color/lightGreen" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
