<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1">

    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/close_icon"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_close_black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/close_button"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:text="@string/VoiceChatWindowTitle"/>
        <ImageView
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/close_button"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/info_icon"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_info_outline_white" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/close_button"
            android:background="@color/darkGray" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/vc_content_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_row="2"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:hint="your speech..."
            android:layout_weight="0.8"
            android:maxLines="6" />
        <ai.api.ui.AIButton
            android:id="@+id/micButton"
            style="@style/ApiAi.Microphone"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.2"
            android:layout_marginEnd="2dp" />

    </LinearLayout>
</GridLayout>