<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".android.VoiceChatActivity">

    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/close_icon"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_close_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/close_button"
            android:text="@string/VoiceChatWindowTitle"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/close_button"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/info_icon"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_info_outline_white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/close_button"
            android:background="@color/darkGray" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/vc_content_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
        </FrameLayout>
    </LinearLayout>

    <View
        android:id="@+id/aiButtonContainer_topBorder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkGray" />

    <LinearLayout
        android:id="@+id/aiButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_speech"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="your speech..."
            android:textSize="18sp"
            android:maxLines="6" />

        <ai.api.ui.AIButton
            android:id="@+id/aiMicButton"
            style="@style/ApiAi.Microphone"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/aiTextButton"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="2dp"
            android:text="Send" />

    </LinearLayout>

</LinearLayout>
